[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/other/back/back.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/other/store/store.gd" type="Script" id=2]
[ext_resource path="res://textures/backs/back1.png" type="Texture" id=3]
[ext_resource path="res://textures/backs/back2.png" type="Texture" id=4]
[ext_resource path="res://textures/backs/back3.png" type="Texture" id=5]
[ext_resource path="res://textures/backs/back4.png" type="Texture" id=6]
[ext_resource path="res://src/other/save/save.tscn" type="PackedScene" id=7]
[ext_resource path="res://textures/menu/restart.png" type="Texture" id=8]
[ext_resource path="res://textures/effect.png" type="Texture" id=9]

[node name="store" type="Node2D"]
script = ExtResource( 2 )

[node name="back" parent="." instance=ExtResource( 1 )]

[node name="back1" type="TouchScreenButton" parent="."]
position = Vector2( 12.3893, 7.26432 )
scale = Vector2( 0.125, 0.125 )
normal = ExtResource( 3 )

[node name="back2" type="TouchScreenButton" parent="."]
position = Vector2( 27.019, 7.13189 )
scale = Vector2( 0.125, 0.125 )
normal = ExtResource( 4 )

[node name="back3" type="TouchScreenButton" parent="."]
position = Vector2( 42.019, 7.13189 )
scale = Vector2( 0.125, 0.125 )
normal = ExtResource( 5 )

[node name="back4" type="TouchScreenButton" parent="."]
position = Vector2( 58.019, 7.13189 )
scale = Vector2( 0.125, 0.125 )
normal = ExtResource( 6 )

[node name="exit" type="TouchScreenButton" parent="."]
modulate = Color( 0.67451, 0.196078, 0.196078, 1 )
position = Vector2( 7, 0 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 8 )

[node name="save" parent="." instance=ExtResource( 7 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false
[connection signal="pressed" from="back1" to="." method="_on_back1_pressed"]
[connection signal="pressed" from="back2" to="." method="_on_back2_pressed"]
[connection signal="pressed" from="back3" to="." method="_on_back3_pressed"]
[connection signal="pressed" from="back4" to="." method="_on_back4_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
